# pydicomutils

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
examples/: create_cr_image_basic_text_sr_and_gsps.py  create_cr_image_basic_text_sr_comprehensive_3d_sr_and_gsps.py  create_ct_image.py  create_enhanced_sr_tid_1500.py  create_enhanced_sr_tid_1500_linear_measurements.py  create_gsps_and_kos.py  create_gsps_from_seg.py  create_sc_image.py  create_wsm_image.py  requirements.txt  run_all_examples.py
examples/data/cr_images/: BBox_List_2017.csv  Data_Entry_2017.csv  README.md
examples/data/ct_images/: README.md
examples/data/ct_images/dcm_segmentation/: nodule_01_annotation_0.dcm
examples/data/ct_images/nrrd_segmentation/: nodule_01_annotation_0.nrrd
examples/data/wsi_images/: README.md
examples/data/wsi_images/openslide/: README.md
examples/utils/misc/: color.py  dcm_io_helper.py
examples/utils/scripts/: convert_seg_to_gsps.py  create_csps_with_annotations.py  create_new_uids.py  helper.py  set_dicom_tag.py
pydicomutils/IODs/: CRImage.py  CSPS.py  CTImage.py  EnhancedSRTID1500.py  IOD.py  KOS.py  WSMImage.py
pydicomutils/IODs/modules/: general_modules.py  specific_image_modules.py
pydicomutils/IODs/sequences/: Sequences.py
pydicomutils/misc/: definitions.py
pydicomutils/scripts/: create_csps_with_annotations.py  helper.py
src/pydicomutils/: __init__.py
src/pydicomutils/IODs/: BasicSRText.py  CSPS.py  Comprehensive3DSRTID1500.py  EnhancedSRTID1500.py  GSPS.py  IOD.py  KOS.py  SCImage.py  WSMImage.py
(+3 files in other folders)
